--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -17,29 +17,133 @@ database:
     password: "password"
 
 # =============================================================================
-# PERMISSION-BASED SELL PRICE MULTIPLIERS
+# MULTIPLIER SYSTEM CONFIGURATION
 # =============================================================================
 multipliers:
-  # Enable permission-based sell price multipliers
+  # Enable the entire multiplier system (permission-based + temporary)
   enabled: true
   
   # Maximum multiplier value (prevents extreme values)
-  max_multiplier: 5.0
+  # This caps the total multiplier a player can have
+  # Note: This should be high enough to accommodate tier + temporary multipliers
+  # Example: Bronze tier (0.1) + 10x temporary = 10.1x total
+  max_multiplier: 15.0
   
-  # Stack multipliers: true = add all applicable multipliers, false = use highest only
-  stack_multipliers: false
+  # Performance optimization settings
+  cache_expiration_ms: 30000  # How long to cache multiplier calculations (30 seconds)
+  cleanup_interval_ms: 60000  # How often to clean up expired multipliers (1 minute)
   
-  # Permission-based multipliers
-  # Format: permission_node: multiplier_value
-  # Examples:
-  # bshop.multiplier.0.8: 0.8  # 20% discount on sell prices
-  # bshop.multiplier.1.2: 1.2  # 20% bonus on sell prices
-  permission_multipliers:
-    "bshop.multiplier.0.8": 0.8
-    "bshop.multiplier.0.9": 0.9
-    "bshop.multiplier.1.1": 1.1
-    "bshop.multiplier.1.2": 1.2
-    "bshop.multiplier.1.5": 1.5
+  # Debug settings
+  debug_logging: false  # Enable detailed multiplier calculation logging
+  
+  # Multiplier display settings
+  display:
+    # Whether to show multiplier indicator in item lore
+    # The %multiplier_display% placeholder will show the raw multiplier value (e.g., "1.5x")
+    # Shop owners can format this however they want in their item lore
+    show_in_lore: true
+    
+    # Format for displaying multipliers in messages and lore
+    # Available placeholders: %multiplier% (raw value), %percentage% (bonus percentage)
+    format: "%multiplier%x"
+    
+    # Whether to show percentage bonus instead of raw multiplier
+    # Example: "1.5x" becomes "+50% bonus"
+    show_percentage_bonus: false
+  
+  # User-friendly multiplier tiers
+  # This replaces the old permission_multipliers system with named tiers
+  # Each tier has a name, multiplier value, and permission node
+  # Multipliers can be >= 0 (0.8x = smaller bonus, 1.0x = normal, 1.5x = larger bonus)
+  # All multipliers are ADDED to base 1.0x (0.8x adds 0.8 = 1.8x total)
+  tiers:
+    # Basic tiers - these are simple and easy to understand
+    basic:
+      # Bronze tier - small bonus
+      bronze:
+        name: "Bronze"
+        multiplier: 1.1
+        permission: "bshop.tier.bronze"
+      
+      # Silver tier - medium bonus  
+      silver:
+        name: "Silver"
+        multiplier: 1.25
+        permission: "bshop.tier.silver"
+      
+      # Gold tier - large bonus
+      gold:
+        name: "Gold"
+        multiplier: 1.5
+        permission: "bshop.tier.gold"
+      
+      # Diamond tier - premium bonus
+      diamond:
+        name: "Diamond"
+        multiplier: 2.0
+        permission: "bshop.tier.diamond"
+    
+    # VIP tiers - for special players
+    vip:
+      # VIP tier
+      vip:
+        name: "VIP"
+        multiplier: 1.75
+        permission: "bshop.vip"
+      
+      # Premium tier
+      premium:
+        name: "Premium"
+        multiplier: 2.5
+        permission: "bshop.premium"
+    
+    # Event tiers - for special events
+    events:
+      # Double sell event
+      double_sell:
+        name: "Double Sell"
+        multiplier: 2.0
+        permission: "bshop.event.double"
+      
+      # Triple sell event
+      triple_sell:
+        name: "Triple Sell"
+        multiplier: 3.0
+        permission: "bshop.event.triple"
+    
+    # Custom tiers - for server-specific needs
+    custom:
+      # Staff bonus
+      staff:
+        name: "Staff"
+        multiplier: 1.3
+        permission: "bshop.staff"
+      
+      # Donor bonus
+      donor:
+        name: "Donor"
+        multiplier: 1.4
+        permission: "bshop.donor"
+    
+    # Smaller bonus tiers - for reduced sell price bonuses
+    smaller_bonuses:
+      # New player smaller bonus
+      new_player:
+        name: "New Player"
+        multiplier: 0.8
+        permission: "bshop.bonus.new"
+      
+      # Inactive player smaller bonus
+      inactive:
+        name: "Inactive"
+        multiplier: 0.9
+        permission: "bshop.bonus.inactive"
+      
+      # Warning smaller bonus
+      warning:
+        name: "Warning"
+        multiplier: 0.7
+        permission: "bshop.bonus.warning"
 
 # =============================================================================
 # LOGGING CONFIGURATION
@@ -74,7 +178,7 @@ alerts:
   message: "%prefix%<green>%player% %type% <aqua>%amount%x %item_id%</aqua> for <gold>$%price%</gold>."
   
   # Discord webhook URL (leave empty to disable)
-  discord_webhook_url: "WEBHOOK_URL_HERE"
+  discord_webhook_url: ""
   
   # Discord webhook payload template
   discord_payload: |
@@ -103,37 +207,64 @@ alerts:
       ]
     }
 
-# Add performance configuration section
+
+# =============================================================================
+# PERFORMANCE CONFIGURATION
+# =============================================================================
 performance:
   # Database connection pool settings (MySQL only)
   database:
-    connection_pool_size: 20
-    minimum_idle: 5
+    connection_pool_size: 10
+    minimum_idle: 2
     connection_timeout: 30000
     idle_timeout: 600000
-    max_lifetime: 1800000
+    max_lifetime: 1800000 
     leak_detection_threshold: 60000
   
   # Caching settings
   caching:
     enabled: true
-    shop_cache_duration: 300000  # 5 minutes
-    player_data_cache_duration: 60000  # 1 minute
-    max_cached_shops: 100
-    max_cached_players: 1000
+    shop_cache_duration: 180000
+    max_cached_shops: 50
+    item_stack_cache_duration: 30000
+    multiplier_cache_duration: 15000
   
   # Async processing
   async:
-    transaction_threads: 4
-    shop_loading_threads: 2
-    gui_update_threads: 2
+    transaction_threads: 2rs
+    enable_thread_naming: true
+    thread_priority: 5
   
   # Memory optimization
   memory:
-    cleanup_interval: 300000  # 5 minutes
-    max_recent_transactions: 50
-    batch_size: 100
-    gui_update_cooldown: 100  # milliseconds
-    inventory_check_cooldown: 500  # milliseconds
-    transaction_cooldown: 100  # milliseconds
+    cleanup_interval: 180000
+  
+  # Cooldown settings (more conservative for better user experience)
+  cooldowns:
+    gui_update: 50
+    inventory_check: 250
+    transaction: 200
+    auto_click_prevention: 50
+  
+  # Monitoring settings
+  monitoring:
+    enabled: true
+    log_interval_minutes: 15
+    enable_detailed_stats: false
+    performance_alert_threshold_ms: 2000
+  
+  # GUI optimization
+  gui:
+    enable_item_stack_caching: true
+    max_cached_item_stacks: 500
+    cache_cleanup_interval: 180000
+    enable_lazy_loading: true
+  
+  # Transaction optimization
+  transaction:
+    enable_rate_limiting: true
+    max_concurrent_transactions: 20  
+    transaction_timeout_ms: 10000    
+    enable_retry_on_failure: true     
+    max_retry_attempts: 2             
 
