--- a/src/main/resources/shops/quick_rotational.yml
+++ b/src/main/resources/shops/quick_rotational.yml
@@ -1,88 +1,189 @@
 # Quick Rotational Shop Example
-# Demonstrates: rotational shop, featured items, announcements, item limits
+# Demonstrates: rotational shop, featured items, rotation announcements
 
-title: "Seasonal Rotational Shop"
-type: rotational
-size: 5
-rotation-interval: 12h
-slots: 7
-item-slots: [10, 12, 14, 16, 28, 30, 32]
+title: "Quick Rotational Shop"
+size: 3
+type: "rotational"
+rotation-interval: "12h"
+slots: 3
 announce-rotation: true
-rotation-message: "<gold>The %shop% shop has rotated! Check out the new items!"
+rotation-message: "<gold>⚡ Shop rotation! New items available in <gray>%shop%</gray>!"
 
 pagination:
   next_page:
     material: LIME_STAINED_GLASS_PANE
     display-name: "<green><bold>Next Page →</bold>"
-    slot: 44
+    slot: 26
   previous_page:
     material: RED_STAINED_GLASS_PANE
     display-name: "<red><bold>← Previous Page</bold>"
-    slot: 36
+    slot: 18
   back_to_menu:
     material: BARRIER
     display-name: "<red><bold>Back to Main Menu</bold>"
     lore:
       - "<gray><i>Return to shop categories.</i>"
-    slot: 40
+    slot: 22
     action: "back_to_main_menu"
   filler:
     material: BLACK_STAINED_GLASS_PANE
     display-name: " "
 
-featured-items:
-  - id: rare_sword
-    material: DIAMOND_SWORD
-    display-name: "<gold>Rare Sword"
-    lore:
-      - "<gray>Buy Price: <gold>$%buy_price%"
-      - "<gray>Sell Price: <green>$%sell_price%"
-      - "<gray>Only available this season!"
-    buy-price: 5000
-    sell-price: 2500
-    buy-limit: 1
-    slot: 20
-  - id: elytra
-    material: ELYTRA
-    display-name: "<aqua>Wings of Flight"
-    lore:
-      - "<gray>Buy Price: <gold>$%buy_price%"
-      - "<gray>Sell Price: <green>$%sell_price%"
-      - "<gray>Soar through the skies!"
-    buy-price: 20000
-    sell-price: 10000
-    buy-limit: 1
-    slot: 24
-featured-slots: [20, 24]
-
 items:
-  - id: magic_apple
-    material: ENCHANTED_GOLDEN_APPLE
-    display-name: "<light_purple>Magic Apple"
+  - id: diamond_sword
+    material: DIAMOND_SWORD
+    display-name: "<yellow>Diamond Sword"
     lore:
-      - "<gray>Buy Price: <gold>$%buy_price%"
-      - "<gray>Sell Price: <green>$%sell_price%"
-      - "<gray>Restores all your health!"
-    buy-price: 10000
-    sell-price: 5000
-    buy-limit: 2
+      - "<gray>Buy Price: <green>$%buy_price%</green>"
+      - "<gray>Sell Price: <red>$%sell_price%</red> <gold>(%multiplier_display%)</gold>"
+      - ""
+      - "<gold>⚡ Featured Item!</gold>"
+      - "<yellow>Click to buy or sell!"
+    buy-price: 100.0
+    sell-price: 50.0
+    slot: 10
+
+  - id: golden_apple
+    material: GOLDEN_APPLE
+    display-name: "<gold>Golden Apple"
+    lore:
+      - "<gray>Buy Price: <green>$%buy_price%</green>"
+      - "<gray>Sell Price: <red>$%sell_price%</red> <aqua>%multiplier_display%</aqua>"
+      - ""
+      - "<yellow>Click to buy or sell!"
+    buy-price: 25.0
+    sell-price: 12.5
+    slot: 11
+
+  - id: bread
+    material: BREAD
+    display-name: "<yellow>Bread"
+    lore:
+      - "<gray>Buy Price: <green>$%buy_price%</green>"
+      - "<gray>Sell Price: <red>$%sell_price%</red> <green>%multiplier_display%</green>"
+      - ""
+      - "<yellow>Click to buy or sell!"
+    buy-price: 2.0
+    sell-price: 1.0
+    slot: 12
+
+  - id: netherite_ingot
+    material: NETHERITE_INGOT
+    display-name: "<purple>Netherite Ingot"
+    lore:
+      - "<gray>Buy Price: <green>$%buy_price%</green>"
+      - "<gray>Sell Price: <red>$%sell_price%</red> <gold>⚡ %multiplier_display%</gold>"
+      - ""
+      - "<gold>🔥 Hot Item!</gold>"
+      - "<yellow>Click to buy or sell!"
+    buy-price: 500.0
+    sell-price: 250.0
+    slot: 13
+
   - id: emerald
     material: EMERALD
     display-name: "<green>Emerald"
     lore:
-      - "<gray>Buy Price: <gold>$%buy_price%"
-      - "<gray>Sell Price: <green>$%sell_price%"
-      - "<gray>Trade for rare goods."
-    buy-price: 100
-    sell-price: 50
-    buy-limit: 16
-  - id: mystery_box
-    material: CHEST
-    display-name: "<yellow>Mystery Box"
+      - "<gray>Buy Price: <green>$%buy_price%</green>"
+      - "<gray>Sell Price: <red>$%sell_price%</red> <aqua>%multiplier_display%</aqua>"
+      - ""
+      - "<yellow>Click to buy or sell!"
+    buy-price: 5.0
+    sell-price: 2.5
+    slot: 14
+
+  - id: diamond
+    material: DIAMOND
+    display-name: "<aqua>Diamond"
     lore:
-      - "<gray>Buy Price: <gold>$%buy_price%"
-      - "<gray>Sell Price: <green>$%sell_price%"
-      - "<gray>Contains a random surprise!"
-    buy-price: 2500
-    sell-price: 0
-    buy-limit: 1
+      - "<gray>Buy Price: <green>$%buy_price%</green>"
+      - "<gray>Sell Price: <red>$%sell_price%</red> <green>%multiplier_display%</green>"
+      - ""
+      - "<yellow>Click to buy or sell!"
+    buy-price: 50.0
+    sell-price: 25.0
+    slot: 15
+
+  - id: iron_ingot
+    material: IRON_INGOT
+    display-name: "<gray>Iron Ingot"
+    lore:
+      - "<gray>Buy Price: <green>$%buy_price%</green>"
+      - "<gray>Sell Price: <red>$%sell_price%</red> <gold>(%multiplier_display%)</gold>"
+      - ""
+      - "<yellow>Click to buy or sell!"
+    buy-price: 10.0
+    sell-price: 5.0
+    slot: 16
+
+  - id: gold_ingot
+    material: GOLD_INGOT
+    display-name: "<gold>Gold Ingot"
+    lore:
+      - "<gray>Buy Price: <green>$%buy_price%</green>"
+      - "<gray>Sell Price: <red>$%sell_price%</red> <aqua>%multiplier_display%</aqua>"
+      - ""
+      - "<yellow>Click to buy or sell!"
+    buy-price: 15.0
+    sell-price: 7.5
+    slot: 19
+
+  - id: coal
+    material: COAL
+    display-name: "<dark_gray>Coal"
+    lore:
+      - "<gray>Buy Price: <green>$%buy_price%</green>"
+      - "<gray>Sell Price: <red>$%sell_price%</red> <green>%multiplier_display%</green>"
+      - ""
+      - "<yellow>Click to buy or sell!"
+    buy-price: 1.0
+    sell-price: 0.5
+    slot: 20
+
+  - id: redstone
+    material: REDSTONE
+    display-name: "<red>Redstone"
+    lore:
+      - "<gray>Buy Price: <green>$%buy_price%</green>"
+      - "<gray>Sell Price: <red>$%sell_price%</red> <gold>⚡ %multiplier_display%</gold>"
+      - ""
+      - "<yellow>Click to buy or sell!"
+    buy-price: 3.0
+    sell-price: 1.5
+    slot: 21
+
+  - id: lapis_lazuli
+    material: LAPIS_LAZULI
+    display-name: "<blue>Lapis Lazuli"
+    lore:
+      - "<gray>Buy Price: <green>$%buy_price%</green>"
+      - "<gray>Sell Price: <red>$%sell_price%</red> <aqua>%multiplier_display%</aqua>"
+      - ""
+      - "<yellow>Click to buy or sell!"
+    buy-price: 4.0
+    sell-price: 2.0
+    slot: 22
+
+  - id: quartz
+    material: QUARTZ
+    display-name: "<white>Quartz"
+    lore:
+      - "<gray>Buy Price: <green>$%buy_price%</green>"
+      - "<gray>Sell Price: <red>$%sell_price%</red> <green>%multiplier_display%</green>"
+      - ""
+      - "<yellow>Click to buy or sell!"
+    buy-price: 6.0
+    sell-price: 3.0
+    slot: 23
+
+  - id: glowstone_dust
+    material: GLOWSTONE_DUST
+    display-name: "<yellow>Glowstone Dust"
+    lore:
+      - "<gray>Buy Price: <green>$%buy_price%</green>"
+      - "<gray>Sell Price: <red>$%sell_price%</red> <gold>(%multiplier_display%)</gold>"
+      - ""
+      - "<yellow>Click to buy or sell!"
+    buy-price: 2.0
+    sell-price: 1.0
+    slot: 24
